--- a/backend/package.json
+++ b/backend/package.json
@@ -14,19 +14,21 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.2",
     "qrcode": "^1.5.4",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "prisma": "^6.3.1",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.1",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
+    "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
