--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
