--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.2",
     "qrcode": "^1.5.4",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -28,6 +29,7 @@
     "@types/node": "^22.13.1",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.15.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
     "ts-node": "^10.9.2",
