--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.3.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
@@ -26,6 +27,7 @@
     "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
